try to use spring-boot 3.x to test